# SimplifiedJapaneseTranslator

./: CMakeLists.txt  Parser.cpp  Parser.h  README.md  Scanner.cpp  Scanner.h  State.cpp  State.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  Transition.cpp  Transition.h  TransitionTable.cpp  TransitionTable.h  Transitions.cpp  Transitions.h  main.cpp
SyntaxExceptions/: SyntaxErrorOne.cpp  SyntaxErrorOne.h  SyntaxErrorTwo.cpp  SyntaxErrorTwo.h
TransitionTable/: TransitionTable.cpp  TransitionTable.h  Transitions.cpp  Transitions.h
Transitions/: TransitionFromState0.cpp  TransitionFromState0.h
